# pyunthermo

./: README.md  setup.cfg
pyunthermo/: __init__.py  wrapper.py
pyunthermo/unthermo/: go.mod  libunthermo.dylib  libunthermo.h
pyunthermo/unthermo/export/: export.go
pyunthermo/unthermo/ms/: data.go
pyunthermo/unthermo/unthermo/: reader.go
