[metadata]
name = pyunthermo
version = attr: pyunthermo.__version__
description = attr: pyunthermo.__description__
author = attr: pyunthermo.__author__
license = attr: pyunthermo.__license__
url = attr: pyunthermo.__url__
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
    = .
install_requires =
    numpy

[options.package_data]
pyunthermo = unthermo/**

[options.packages.find]
where = .